Elastic: Fix too small height of mailvelope mail preview frame (#6600)

--- a/skins/elastic/styles/widgets/mail.less
+++ b/skins/elastic/styles/widgets/mail.less
@@ -130,6 +130,10 @@
 #messagebody {
     &.mailvelope {
         margin: 0;
+
+        iframe {
+            min-height: 75vh;
+        }
     }
 }
 
@@ -211,10 +215,6 @@
 
     div.pre {
         font-family: monospace;
-    }
-
-    &.mailvelope iframe {
-        min-height: 35em;
     }
 }
 
